Converted aMustNotHaveJavascriptHref to Selenium

--- a/test/assessmentSpecs/specs/aMustNotHaveJavascriptHref/aMustNotHaveJavascriptHref-nomatch.html
+++ b/test/assessmentSpecs/specs/aMustNotHaveJavascriptHref/aMustNotHaveJavascriptHref-nomatch.html
@@ -5,7 +5,9 @@
   </head>
   <body>
 
-
+    <div data-expected="pass">
+      <a href="fallback.html" onclick="dosomething(); return false;">Scripted link with fallback href</a>
+    </div>
 
   </body>
 </html>
