--- a/test/assessmentSpecs/specs/aMustNotHaveJavascriptHref/aMustNotHaveJavascriptHref.html
+++ b/test/assessmentSpecs/specs/aMustNotHaveJavascriptHref/aMustNotHaveJavascriptHref.html
@@ -1,18 +1,11 @@
 <!doctype html>
 <html>
-	<head>
-		<title>aMustNotHaveJavascriptHref</title>
-	</head>
-	<body>
-		<div data-expected="pass">
-		  <a href="fallback.html" onclick="dosomething(); return false;">Scripted link with fallback href</a>
-		</div>
-
-		<div data-expected="fail">
-			<a href="javascript:dosomething()" class="quail-failed-element">Scripted link</a>
-
-		</div>
-
-
-		</body>
+  <head>
+    <title>aMustNotHaveJavascriptHref</title>
+  </head>
+  <body>
+    <div data-expected="fail">
+      <a id="assert-1" href="javascript:dosomething()" class="quail-failed-element">Scripted link</a>
+    </div>
+  </body>
 </html>
