Converted aTitleDescribesDestination to Selenium

--- a/test/assessmentSpecs/specs/aTitleDescribesDestination/aTitleDescribesDestination.html
+++ b/test/assessmentSpecs/specs/aTitleDescribesDestination/aTitleDescribesDestination.html
@@ -1,17 +1,13 @@
 <!doctype html>
 <html>
-	<head>
-		<title>aTitleDescribesDestination</title>
-	</head>
-	<body>
-		<div data-expected="pass">
+  <head>
+    <title>aTitleDescribesDestination</title>
+  </head>
+  <body>
 
-		</div>
+    <div data-expected="fail">
+      <p>We have more <a id="assert-1" href="dogs.html" title="cats information">information about dogs</a> on our site.</p>
+    </div>
 
-		<div data-expected="fail">
-		  <p>We have more <a href="dogs.html" title="cats information" class="quail-failed-element">information about dogs</a> on
-            our site.</p>
-		</div>
-
-			</body>
+  </body>
 </html>
