Converted areaAltIdentifiesDestination to Selenium

--- a/test/assessmentSpecs/specs/areaAltIdentifiesDestination/areaAltIdentifiesDestination-nomatch.html
+++ b/test/assessmentSpecs/specs/areaAltIdentifiesDestination/areaAltIdentifiesDestination-nomatch.html
@@ -5,7 +5,12 @@
   </head>
   <body>
 
-
+    <div data-expected="pass">
+      <img src="assets/library.gif" usemap="#map1" alt="Image map of areas in the library" />
+      <map id="map1" name="map1">
+        <area id="assert-1" shape="rect" coords="0,0,50,50" href="assets.html" alt="drawing of a blue book" />
+      </map>
+    </div>
 
   </body>
 </html>
