--- a/test/assessmentSpecs/specs/areaAltIdentifiesDestination/areaAltIdentifiesDestination.html
+++ b/test/assessmentSpecs/specs/areaAltIdentifiesDestination/areaAltIdentifiesDestination.html
@@ -1,35 +1,14 @@
 <!doctype html>
 <html>
-	<head>
-		<title>areaAltIdentifiesDestination</title>
-	</head>
-	<body>
-		<div data-expected="fail">
-		  <p>
-          <img src="../assets/library.gif" usemap="#map1" alt="Image map of areas in the library"
-          />
-      </p>
-      <p>
-          <map id="map1" name="map1">
-              <area class="quail-failed-element" shape="rect" coords="0,0,50,50" href="../assets.html" alt="drawing of a blue book"
-              />
-          </map>
-      </p>
-		</div>
-
-		<div data-expected="fail">
-		  <p>
-            <img src="../assets/library.gif" usemap="#map1" alt="Image map of areas in the library"
-            />
-        </p>
-        <p>
-            <map id="map1" name="map1">
-                <area class="quail-failed-element" shape="rect" coords="0,0,50,50" href="reference.html" alt="reference section"
-                />
-            </map>
-        </p>
-		</div>
-
-
-		</body>
+  <head>
+    <title>areaAltIdentifiesDestination</title>
+  </head>
+  <body>
+    <div data-expected="fail">
+      <img src="assets/library.gif" usemap="#map1" alt="Image map of areas in the library" />
+      <map id="map1" name="map1">
+        <area id="assert-1" shape="rect" coords="0,0,50,50" href="reference.html" />
+      </map>
+    </div>
+  </body>
 </html>
