--- a/test/assessmentSpecs/specs/basefontIsNotUsed/basefontIsNotUsed-nomatch.html
+++ b/test/assessmentSpecs/specs/basefontIsNotUsed/basefontIsNotUsed-nomatch.html
@@ -5,7 +5,9 @@
   </head>
   <body>
 
-
+    <div data-expected="pass">
+      <p>A paragraph with no basefont.</p>
+    </div>
 
   </body>
 </html>
