Converted blinkIsNotUsed to Selenium

--- a/test/assessmentSpecs/specs/blinkIsNotUsed/blinkIsNotUsed.html
+++ b/test/assessmentSpecs/specs/blinkIsNotUsed/blinkIsNotUsed.html
@@ -1,16 +1,13 @@
 <!doctype html>
 <html>
-	<head>
-		<title>blinkIsNotUsed</title>
-	</head>
-	<body>
-		<div data-expected="pass">
-		  <p>No blink!</p>
-		</div>
+  <head>
+    <title>blinkIsNotUsed</title>
+  </head>
+  <body>
 
-		<div data-expected="fail">
-		  <blink class="quail-failed-element">blinks</blink>
-		</div>
+    <div data-expected="fail">
+      <blink id="assert-1">blinks</blink>
+    </div>
 
-			</body>
+  </body>
 </html>
