Converted boldIsNotUsed to Selenium

--- a/test/assessmentSpecs/specs/boldIsNotUsed/boldIsNotUsed-nomatch.html
+++ b/test/assessmentSpecs/specs/boldIsNotUsed/boldIsNotUsed-nomatch.html
@@ -5,7 +5,12 @@
   </head>
   <body>
 
-
+    <div data-expected="inapplicable">
+      <p>
+        What she <em>really</em>
+        meant to say was, "This isn't ok, it is <strong>excellent</strong>!"
+      </p>
+    </div>
 
   </body>
 </html>
