Change instances of notTested to untested

--- a/test/core/preFilter.html
+++ b/test/core/preFilter.html
@@ -40,7 +40,7 @@
             }
           },
           caseResolve : function(eventName, thisTest, _case) {
-            equal('notTested', _case.get('status'), 'Image was filtered out.');
+            equal('untested', _case.get('status'), 'Image was filtered out.');
             start();
           }
         });
