Converted cssDocumentMakesSenseStyleTurnedOff to Selenium

--- a/test/assessmentSpecs/specs/cssDocumentMakesSenseStyleTurnedOff/cssDocumentMakesSenseStyleTurnedOff.html
+++ b/test/assessmentSpecs/specs/cssDocumentMakesSenseStyleTurnedOff/cssDocumentMakesSenseStyleTurnedOff.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
-	<head>
-		<title>cssDocumentMakesSenseStyleTurnedOff</title>
-	</head>
-	<body>
-		<div data-expected="fail">
-			<link class="quail-failed-element" rel="stylesheet"/>
-		</div>
-			</body>
+  <head>
+    <title>cssDocumentMakesSenseStyleTurnedOff</title>
+  </head>
+  <body>
+
+    <div data-expect="untested"></div>
+
+  </body>
 </html>
