Converted documentAutoRedirectNotUsed to Selenium

--- a/test/assessmentSpecs/specs/documentAutoRedirectNotUsed/documentAutoRedirectNotUsed-fail.html
+++ b/test/assessmentSpecs/specs/documentAutoRedirectNotUsed/documentAutoRedirectNotUsed-fail.html
@@ -1,12 +1,10 @@
 <!doctype html>
-<html data-expected="fail">
+<html>
 <head>
-	<title>documentAutoRedirectNotUsed-fail</title>
-	<meta class="quail-failed-element" http-equiv="refresh" content="http://www.foo.com/bar.html"/>
+  <title>documentAutoRedirectNotUsed-fail</title>
+  <meta id="assert-1" http-equiv="refresh" content="http://www.foo.com/bar.html"/>
 </head>
-
-<body>
-	<p>This page has an auto-redirect.</p>
+  <body>
+    <p>This page has an auto-redirect.</p>
   </body>
-
 </html>
