--- a/test/assessmentSpecs/specs/documentAutoRedirectNotUsed/documentAutoRedirectNotUsed-pass.html
+++ b/test/assessmentSpecs/specs/documentAutoRedirectNotUsed/documentAutoRedirectNotUsed-pass.html
@@ -1,11 +1,9 @@
 <!doctype html>
-<html data-expected="pass">
+<html>
 <head>
-	<title>documentAutoRedirectNotUsed-fail</title>
+  <title>documentAutoRedirectNotUsed-fail</title>
 </head>
-
-<body>
-	<p>This page has no auto-redirect.</p>
+  <body>
+    <p>This page has no auto-redirect.</p>
   </body>
-
-	</html>
+</html>
