Converted documentLangNotIdentified to Selenium

--- a/test/assessmentSpecs/specs/documentLangNotIdentified/documentLangNotIdentified-fail.html
+++ b/test/assessmentSpecs/specs/documentLangNotIdentified/documentLangNotIdentified-fail.html
@@ -1,11 +1,8 @@
 <!doctype html>
-<html>
+<html id="assert-1" lang>
   <head>
     <title>documentLangNotIdentified</title>
   </head>
   <body>
-
-
-
   </body>
 </html>
