--- a/test/accessibility-tests/imgAltNotEmptyInAnchor.html
+++ b/test/accessibility-tests/imgAltNotEmptyInAnchor.html
@@ -1,25 +1,52 @@
 <!doctype html>
 <html>
 <head>
-	<title>imgAltNotEmptyInAnchor</title>
+  <title>imgAltNotEmptyInAnchor</title>
 </head>
 <body>
-	<div class="quail-test" data-expected="fail" data-accessibility-test="imgAltNotEmptyInAnchor">
-		<p>
-			<a href="rex.html">
-				<img src="../assets/rex.jpg" alt="" class="quail-failed-element"/>
-			</a>
-		</p>
-	</div>
+  <div class="quail-test" data-expected="fail" data-accessibility-test="imgAltNotEmptyInAnchor">
+    <p>
+      <a href="rex.html">
+        <img src="../assets/rex.jpg" alt="" class="quail-failed-element"/>
+      </a>
+    </p>
+  </div>
 
-	<div class="quail-test" data-expected="pass" data-accessibility-test="imgAltNotEmptyInAnchor">
-		<p>
-			<a href="rex.html">
-				<img src="../assets/rex.jpg" alt="a story about Rex the cat"/>
-			</a>
-		</p>
-	</div>
 
-	<script src="../quail-testrunner.js"></script>
+  <div class="quail-test" data-expected="fail" data-accessibility-test="imgAltNotEmptyInAnchor">
+    <p>
+      <a href="rex.html">
+        <b><img src="../assets/rex.jpg" alt="" class="quail-failed-element"/></b>
+      </a>
+    </p>
+  </div>
+
+  <div class="quail-test" data-expected="pass" data-accessibility-test="imgAltNotEmptyInAnchor">
+    <p>
+      <a href="rex.html">
+        <img src="../assets/rex.jpg" alt="a story about Rex the cat"/>
+      </a>
+    </p>
+  </div>
+
+  <div class="quail-test" data-expected="pass" data-accessibility-test="imgAltNotEmptyInAnchor">
+    <p>
+      <a href="rex.html">
+        <img src="../assets/rex.jpg" alt=""/> <b>a story about Rex the cat</b>
+      </a>
+    </p>
+  </div>
+
+  <div class="quail-test" data-expected="pass" data-accessibility-test="imgAltNotEmptyInAnchor">
+    <p>
+      <a href="rex.html">
+        <img src="../assets/rex.jpg" alt="a story about Rex the cat"/>
+        <img src="../assets/rex.jpg" alt=""/>
+        <img src="../assets/rex.jpg" alt=""/>
+      </a>
+    </p>
+  </div>
+
+  <script src="../quail-testrunner.js"></script>
 </body>
 </html>
