Working on documentReadingDirection

--- a/test/assessmentSpecs/specs/documentReadingDirection/documentReadingDirection.html
+++ b/test/assessmentSpecs/specs/documentReadingDirection/documentReadingDirection.html
@@ -7,13 +7,13 @@
 <body>
 	<div data-expected="fail" dir="ltr">
 		<p>
-			The title says "<span lang="he">פעילות הבינאום, W3C</span>" in Hebrew.
+			The title says "<span id="assert-1" lang="he">פעילות הבינאום, W3C</span>" in Hebrew.
 		</p>
 	</div>
 	<div data-expected="pass" dir="ltr">
 
 		<p>
-			The title says "<span lang="he" dir="rtl">פעילות הבינאום, W3C</span>"in Hebrew.
+			The title says "<span id="assert-2" lang="he" dir="rtl">פעילות הבינאום, W3C</span>"in Hebrew.
 		</p>
 	</div>
 
