--- a/test/assessmentSpecs/specs/documentTitleDescribesDocument/documentTitleDescribesDocument-nomatch.html
+++ b/test/assessmentSpecs/specs/documentTitleDescribesDocument/documentTitleDescribesDocument-nomatch.html
@@ -1,11 +1,5 @@
 <!doctype html>
 <html>
-  <head>
-    <title>documentTitleDescribesDocument</title>
-  </head>
-  <body>
-
-
-
-  </body>
+  <head></head>
+  <body></body>
 </html>
