--- a/test/assessmentSpecs/specs/documentTitleDescribesDocument/documentTitleDescribesDocument.html
+++ b/test/assessmentSpecs/specs/documentTitleDescribesDocument/documentTitleDescribesDocument.html
@@ -1,24 +1,7 @@
 <!doctype html>
 <html>
-<head>
-  <title>documentTitleDescribesDocument</title>
-</head>
-<body>
-
-	<p>This document has a title element.</p>
-		<script>
-    (function(global) {
-      asyncTest('Title element selected', function() {
-        $(document).quail({ jsonPath : '../../dist',
-          guideline : [ 'documentTitleDescribesDocument' ],
-          reset : true,
-          caseResolve : function(eventName, thisTest, _case) {
-            ok(_case.get('status') === 'failed', 'Title element higlighted as possible fail');
-            start();
-          }
-        });
-      });
-    })(this);
-  </script>
-  </body>
+  <head>
+    <title id="assert-1">documentTitleDescribesDocument</title>
+  </head>
+  <body></body>
 </html>
