Converted domOrderMatchesVisualOrder to Selenium

--- a/test/assessmentSpecs/specs/domOrderMatchesVisualOrder/domOrderMatchesVisualOrder-nomatch.html
+++ b/test/assessmentSpecs/specs/domOrderMatchesVisualOrder/domOrderMatchesVisualOrder-nomatch.html
@@ -1,11 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>domOrderMatchesVisualOrder</title>
+    <title>domOrderMatchesVisualOrder-nomatch</title>
   </head>
-  <body>
-
-
-
-  </body>
+  <body></body>
 </html>
