Converted fontIsNotUsed to Selenium

--- a/test/assessmentSpecs/specs/fontIsNotUsed/fontIsNotUsed-nomatch.html
+++ b/test/assessmentSpecs/specs/fontIsNotUsed/fontIsNotUsed-nomatch.html
@@ -4,8 +4,8 @@
     <title>fontIsNotUsed</title>
   </head>
   <body>
-
-
-
+    <div data-expected="pass">
+      <p>This paragraph has no font tag </p>
+    </div>
   </body>
 </html>
