Converted formButtonsHaveValue to Selenium

--- a/test/assessmentSpecs/specs/formButtonsHaveValue/formButtonsHaveValue-nomatch.html
+++ b/test/assessmentSpecs/specs/formButtonsHaveValue/formButtonsHaveValue-nomatch.html
@@ -4,8 +4,8 @@
     <title>formButtonsHaveValue</title>
   </head>
   <body>
-
-
-
+    <div data-expected="inapplicable">
+      <!-- No button here -->
+    </div>
   </body>
 </html>
