--- a/test/assessmentSpecs/specs/formButtonsHaveValue/formButtonsHaveValue.html
+++ b/test/assessmentSpecs/specs/formButtonsHaveValue/formButtonsHaveValue.html
@@ -1,44 +1,34 @@
 <!doctype html>
 <html>
 <head>
-	<title>formButtonsHaveValue</title>
+  <title>formButtonsHaveValue</title>
 </head>
 <body>
+  <div data-expected="fail">
+    <form>
+      <input id="assert-1" type="submit">
+    </form>
+  </div>
 
-	<div data-expected="inapplicable"
-	data-accessibility-test="formButtonsHaveValue">
-		<!-- No button here -->
-	</div>
+  <div data-expected="fail">
+    <form>
+      <input id="assert-2" type="button">
+    </form>
+  </div>
 
-	<div data-expected="fail"
-	data-accessibility-test="formButtonsHaveValue">
-		<form>
-			<input type="submit" class="quail-failed-element">
-		</form>
-	</div>
+  <div data-expected="fail">
+    <form>
+      <input id="assert-3" type="reset">
+    </form>
+  </div>
 
-	<div data-expected="fail"
-	data-accessibility-test="formButtonsHaveValue">
-		<form>
-			<input type="button" class="quail-failed-element">
-		</form>
-	</div>
-
-	<div data-expected="fail"
-	data-accessibility-test="formButtonsHaveValue">
-		<form>
-			<input type="reset" class="quail-failed-element">
-		</form>
-	</div>
-
-	<div data-expected="pass"
-	data-accessibility-test="formButtonsHaveValue">
-		<form>
-			<input type="submit" value="Submit">
-			<input type="button" value="Do another thing">
-			<input type="reset" value="Reset">
-		</form>
-	</div>
+  <div data-expected="pass">
+    <form>
+      <input id="assert-4" type="submit" value="Submit">
+      <input id="assert-5" type="button" value="Do another thing">
+      <input id="assert-6" type="reset" value="Reset">
+    </form>
+  </div>
 
   </body>
 </html>
